# Particle_tracking_plugin

./: .gitignore  Kalman_tracker_20251030.ipynb  particle_tracker_setup.ipynb
napari-particle-tracker/: pyproject.toml
napari-particle-tracker/napari_particle_tracker/: _detection_preview_widget.py  _export.py  _helpers.py  _image_import_widget.py  _processing.py  _tabs.py  _tracking_widget.py  _validation_state.py  _widget.py  napari.yaml  tracks_table_widget.py
