[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napari-particle-tracker"
version = "0.0.1"
description = "A napari plugin for puncta detection and tracking in live-cell image series."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
  { name = "Your Name", email = "you@example.com" }
]

# These packages are needed when the plugin runs
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "pandas",
  "dask",
  "napari",
  "magicgui"
]

# Optional extras, e.g. for tracking
[project.optional-dependencies]
tracking = ["trackpy>=0.6"]

# Entry point for napari to find your plugin's manifest
[project.entry-points."napari.manifest"]
napari-particle-tracker = "napari_particle_tracker:napari.yaml"
